--- a/3D_Image_Classification_CNN.ipynb
+++ b/3D_Image_Classification_CNN.ipynb
@@ -148,45 +148,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_5 (Conv2D)            (None, 510, 510, 16)      448       \n",
+      "conv2d (Conv2D)              (None, 510, 510, 16)      448       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_5 (MaxPooling2 (None, 255, 255, 16)      0         \n",
+      "max_pooling2d (MaxPooling2D) (None, 255, 255, 16)      0         \n",
       "_________________________________________________________________\n",
-      "conv2d_6 (Conv2D)            (None, 253, 253, 32)      4640      \n",
+      "conv2d_1 (Conv2D)            (None, 253, 253, 32)      4640      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_6 (MaxPooling2 (None, 126, 126, 32)      0         \n",
+      "max_pooling2d_1 (MaxPooling2 (None, 126, 126, 32)      0         \n",
       "_________________________________________________________________\n",
-      "conv2d_7 (Conv2D)            (None, 124, 124, 64)      18496     \n",
+      "dropout (Dropout)            (None, 126, 126, 32)      0         \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_7 (MaxPooling2 (None, 62, 62, 64)        0         \n",
+      "conv2d_2 (Conv2D)            (None, 124, 124, 64)      18496     \n",
       "_________________________________________________________________\n",
-      "conv2d_8 (Conv2D)            (None, 60, 60, 64)        36928     \n",
+      "max_pooling2d_2 (MaxPooling2 (None, 62, 62, 64)        0         \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_8 (MaxPooling2 (None, 30, 30, 64)        0         \n",
+      "dropout_1 (Dropout)          (None, 62, 62, 64)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_9 (Conv2D)            (None, 28, 28, 64)        36928     \n",
+      "conv2d_3 (Conv2D)            (None, 60, 60, 64)        36928     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_9 (MaxPooling2 (None, 14, 14, 64)        0         \n",
+      "max_pooling2d_3 (MaxPooling2 (None, 30, 30, 64)        0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 12544)             0         \n",
+      "dropout_2 (Dropout)          (None, 30, 30, 64)        0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 128)               1605760   \n",
+      "conv2d_4 (Conv2D)            (None, 28, 28, 64)        36928     \n",
       "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 2)                 258       \n",
+      "max_pooling2d_4 (MaxPooling2 (None, 14, 14, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "dropout_3 (Dropout)          (None, 14, 14, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 12544)             0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 128)               1605760   \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 1)                 129       \n",
       "=================================================================\n",
-      "Total params: 1,703,458\n",
-      "Trainable params: 1,703,458\n",
+      "Total params: 1,703,329\n",
+      "Trainable params: 1,703,329\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
