--- a/3D_Image_Classification_CNN.ipynb
+++ b/3D_Image_Classification_CNN.ipynb
@@ -42,7 +42,7 @@
     "        '/home/kenan/Desktop/COV19D/train/',  # Source directory for training images\n",
     "        target_size=(512, 512),  # Images are 512x512\n",
     "        batch_size=batch_size,  # The batch size\n",
-    "        classes = ['covid','non-covid'], # Tow classes\n",
+    "        classes = ['covid','non-covid'], # Two classes\n",
     "        class_mode='binary') # Binary Task"
    ]
   },
